--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="app_name">Map Demo</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="google_maps_api_key"></string>
+    <string name="google_maps_api_key">AIzaSyAeRQ8GgSfJb8RznI1g5F_osT1He-bR9_4</string>
 </resources>
